@@ -155,7 +155,7 @@ func (f *fleetGateway) worker() {
 
 func (f *fleetGateway) doExecute() (*fleetapi.CheckinResponse, error) {
 	f.backoff.Reset()
-	for {
+	for f.bgContext.Err() == nil {
 		// TODO: wrap with timeout context
 		resp, err := f.execute(f.bgContext)
 		if err != nil {
@@ -171,6 +171,8 @@ func (f *fleetGateway) doExecute() (*fleetapi.CheckinResponse, error) {
 		}
 		return resp, nil
 	}
+
+	return nil, f.bgContext.Err()
 }
 
 func (f *fleetGateway) execute(ctx context.Context) (*fleetapi.CheckinResponse, error) {
