@@ -38,6 +38,7 @@ type ReportFailureFunc func(context.Context, string, error)
 
 // Application encapsulates a concrete application ran by elastic-agent e.g Beat.
 type Application struct {
+	bgContext       context.Context
 	id              string
 	name            string
 	pipelineID      string
@@ -68,6 +69,7 @@ type ArgsDecorator func([]string) []string
 // NewApplication creates a new instance of an applications. It will not automatically start
 // the application.
 func NewApplication(
+	ctx context.Context,
 	id, appName, pipelineID string,
 	spec Specifier,
 	factory remoteconfig.ConnectionCreator,
@@ -82,8 +84,9 @@ func NewApplication(
 		return nil, err
 	}
 
-	b, _ := tokenbucket.NewTokenBucket(3, 3, 1*time.Second)
+	b, _ := tokenbucket.NewTokenBucket(ctx, 3, 3, 1*time.Second)
 	return &Application{
+		bgContext:       ctx,
 		id:              id,
 		name:            appName,
 		pipelineID:      pipelineID,
@@ -150,10 +153,14 @@ func (a *Application) State() state.State {
 
 func (a *Application) watch(ctx context.Context, proc *os.Process, cfg map[string]interface{}) {
 	go func() {
-		procState, err := proc.Wait()
-		if err != nil {
-			// process is not a child - some OSs requires process to be child
-			a.externalProcess(proc)
+		var procState *os.ProcessState
+
+		select {
+		case ps := <-a.waitProc(proc):
+			procState = ps
+		case <-a.bgContext.Done():
+			a.Stop()
+			return
 		}
 
 		a.appLock.Lock()
@@ -173,6 +180,22 @@ func (a *Application) watch(ctx context.Context, proc *os.Process, cfg map[strin
 			a.Start(ctx, cfg)
 		}
 	}()
+}
+
+func (a *Application) waitProc(proc *os.Process) <-chan *os.ProcessState {
+	resChan := make(chan *os.ProcessState)
+
+	go func() {
+		procState, err := proc.Wait()
+		if err != nil {
+			// process is not a child - some OSs requires process to be child
+			a.externalProcess(proc)
+		}
+
+		resChan <- procState
+	}()
+
+	return resChan
 }
 
 func (a *Application) reportCrash(ctx context.Context) {
