@@ -17,6 +17,7 @@
 - Fixed installers for SNAPSHOTs and windows {pull}17077[17077]
 - Fixed merge of config {pull}17399[17399]
 - Handle abs paths on windows correctly {pull}17461[17461]
+- Improved cancellation of agent {pull}17318[17318]
 
 ==== New features
 
